--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 <body>
     <!-- THE HEADER -->
     <header class="container">
-        <a href="/unleashed/index.html"><img src="Images/UNLCLOBLACK.png" alt="" class="LogoH"></a>        
+        <a href="/unleashed/index.html"><img src="/unleashed/Images/UNLCLOBLACK.png" alt="" class="LogoH"></a>        
         <!-- MENU LIST (MOBILE) -->
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menulist">☰</label>
@@ -76,17 +76,17 @@
     <div class="container5">
         <h1>CONTACTS</h1>
         <h2>ONLINE TRANSACTION</h2>
-        <img src="uUnleashed/Images/phone-num.png" alt="Phone Number" class="socmedlogo">
+        <img src="/unleashed/Images/phone-num.png" alt="Phone Number" class="socmedlogo">
         <h3>(+63) 976-155-3457</h3>
         <br>
         <h2>SOCIAL MEDIA ACCOUTNS</h2>
         <div class="socmed-container">
-            <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/Unleashed/Images/facebook.png" alt="Faceebook" class="socmedlogo"></a>
-            <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/Unleashed/Images/instagram.png" alt="instagram" class="socmedlogo"></a>
+            <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/unleashed/Images/facebook.png" alt="Faceebook" class="socmedlogo"></a>
+            <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/unleashed/Images/instagram.png" alt="instagram" class="socmedlogo"></a>
         </div>
         <br>
         <h2>EMAIL</h2>
-        <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/Unleashed/Images/email.png" alt="Email" class="socmedlogo"></a>
+        <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/unleashed/Images/email.png" alt="Email" class="socmedlogo"></a>
         <h3><a href="mailto:unleashedclo@gmail.com" class="black">unleashedclo@gmail.com</a></h3> <!--CHANGE NALANG -->
     </div>
 
@@ -94,12 +94,12 @@
     <footer class="container6">
         <div class="Fcon">
             <div>
-                <img src="Images/UNLCLOWHITE.png" alt="" class="logoF">
+                <img src="/unleashed/Images/UNLCLOWHITE.png" alt="" class="logoF">
             </div>
             <div class="contactsF">
-                <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/Unleashed/Images/facebook.png" alt="Facebook" class="contacts"></a>
-                <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/Unleashed/Images/instagram.png" alt="Instagram" class="contacts"></a>
-                <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/Unleashed/Images/email.png" alt="Email" class="contacts"></a>
+                <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/unleashed/Images/facebook.png" alt="Facebook" class="contacts"></a>
+                <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/unleashed/Images/instagram.png" alt="Instagram" class="contacts"></a>
+                <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/unleashed/Images/email.png" alt="Email" class="contacts"></a>
             </div>
         </div>
         <div class="phone">
