--- a/unleashed/PAGES/allproducts.html
+++ b/unleashed/PAGES/allproducts.html
@@ -81,9 +81,9 @@
                 <img src="/unleashed/Images/UNLCLOWHITE.png" alt="" class="logoF">
             </div>
             <div class="contactsF">
-                <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/Unleashed/Images/facebook.png" alt="Facebook" class="contacts"></a>
-                <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/Unleashed/Images/instagram.png" alt="Instagram" class="contacts"></a>
-                <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/Unleashed/Images/email.png" alt="Email" class="contacts"></a>
+                <a href="https://www.facebook.com/profile.php?id=61564943033997&rdid=53VHLi87lvPdSdSU&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F165Hjwo3pT#" target="_blank"><img src="/unleashed/Images/facebook.png" alt="Facebook" class="contacts"></a>
+                <a href="https://www.instagram.com/unleashedclo_2024/" target="_blank"><img src="/unleashed/Images/instagram.png" alt="Instagram" class="contacts"></a>
+                <a href="mailto:unleashedclo@gmail.com" target="_blank"><img src="/unleashed/Images/email.png" alt="Email" class="contacts"></a>
             </div>
         </div>
         <div class="phone">
