--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- THE HEADER -->
     <header class="container">
-        <a href="/Unleashed/index.html"><img src="/unleashed/Images/UNLCLOBLACK.png" alt="" class="LogoH"></a>        
+        <a href="/unleashed/index.html"><img src="/unleashed/Images/UNLCLOBLACK.png" alt="" class="LogoH"></a>        
         <!-- MENU LIST (MOBILE) -->
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menulist">☰</label>
